grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    _expressions: $ => choice(
      $.expression,
      $.expression_list,
    ),

    log_statement: $ => seq(
      'log',
      $._expressions,
    ),

    pass_statement: _ => prec.left('pass'),
    for_statement: $ => seq(
      'for',
      field('left', choice(
        // `for i: uint256 in range(...)`. The general typed_parameter rule
        // lets `type` swallow `uint256 in range(...)` as a comparison.
        alias($.for_typed_target, $.typed_parameter),
        $._left_hand_side,
      )),
      'in',
      field('right', $._expressions),
      ':',
      field('body', $._suite),
      field('alternative', optional($.else_clause)),
    ),

    function_definition: $ => seq(
      'def',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional(
        seq(
          '->',
          field('return_type', $.type),
        ),
      ),
      ':',
      field('body', $._suite),
    ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    type_parameter: $ => seq(
      '[',
      commaSep1($.type),
      optional(','),
      ']',
    ),

    event_definition: $ => seq(
      'event',
      field('name', $.identifier),
      ':',
      field('body', $._suite),
    ),

    struct_definition: $ => seq(
      'struct',
      field('name', $.identifier),
      ':',
      field('body', $._suite),
    ),

    interface_definition: $ => seq(
      'interface',
      field('name', $.identifier),
      ':',
      field('body', $.interface_sigs),
    ),

    interface_sigs: $ => seq(
      $._newline,
      $._indent,
      repeat1($.interface_sig),
      $._dedent,
    ),

    interface_sig: $ => seq(
      'def',
      field('name', $.identifier),
      field('parameters', $.parameters),
      optional(
        seq(
          '->',
          field('return_type', $.type),
        ),
      ),
      ':',
      field('mutability', $.identifier),
    ),

    enum_definition: $ => seq(
      'enum',
      field('name', $.identifier),
      ':',
      field('members', $.enum_members),
    ),

    enum_members: $ => seq(
      $._indent,
      repeat1(
        seq(
          $.identifier,
          $._newline,
        ),
      ),
      $._dedent,
    ),

    flag_definition: $ => seq(
      'flag',
      field('name', $.identifier),
      ':',
      field('members', $.enum_members),
    ),

    error_definition: $ => seq(
      'error',
      field('name', $.identifier),
      ':',
      field('body', $._suite),
    ),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(','),
    ),

    named_expression: $ => prec(PREC.call, seq(
      field('name', $.identifier),
      ':=',
      field('value', $.expression),
    )),

    assignment: $ => seq(
      field('left', $._left_hand_side),
      choice(
        seq('=', field('right', $._right_hand_side)),
        seq(':', field('type', $.type)),
        seq(':', field('type', $.type), '=', field('right', $._right_hand_side)),
      ),
    ),

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list,
      $.typed_parameter,
    ),

    _right_hand_side: $ => choice(
      $.expression,
      $.expression_list,
      $.assignment,
      $.augmented_assignment,
      $.pattern_list,
    ),

    attribute: $ => prec(PREC.call, seq(
      field('object', $.primary_expression),
      '.',
      field('attribute', $.identifier),
    )),

    call: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      field('arguments', choice(
        $.generator_expression,
        $.argument_list,
      )),
    )),

    typed_parameter: $ => prec(PREC.typed_parameter, seq(
      choice(
        $.identifier,
        $.list_splat_pattern,
        $.dictionary_splat_pattern,
      ),
      ':',
      field('type', $.type),
    )),

    type: $ => choice(
      prec(1, $.expression),
      $.splat_type,
      $.generic_type,
      $.union_type,
      $.constrained_type,
      $.member_type,
    ),
    generic_type: $ => prec(1, seq(
      choice(
        $.identifier,
        alias('type', $.identifier),
      ),
      $.type_parameter,
    )),
    string: $ => seq(
      $.string_start,
      repeat(choice($.interpolation, $.string_content)),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    integer: _ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
        optional(/[Ll]/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
        optional(/[Ll]/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        choice(
          optional(/[Ll]/), // long numbers
          optional(/[jJ]/), // complex numbers
        ),
      ),
    )),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,
